package dominio;

import java.time.LocalDate;

public class Comentario {
    User user;
    String texto;
    LocalDate fechaCreacion;
    boolean esdado;

    public void crearComentario() {

    }
}
