package dominio;

public class Notificacion {
}
